<resources>
    <string name="app_name">공단기 좌석 예약</string>
    <string name="gong_main_imag" />
    <string name="gong_book_system">공단기 좌석 예약</string>
    <string name="change_text">좌석 변경</string>
    <string name="cancel_text">좌석 취소</string>
    <string name="book_text">좌석 예약</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">회원정보 수정</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="setting_email">이메일 변경</string>
    <string name="setting_password">비밀번호 변경</string>
    <string name="setting_login_option">포털 로그인 방식 변경</string>
    <string name="portal_login">포털 로그인 정보 수정</string>
    <string name="setting_portal_id">포털 로그인 아이디 변경</string>
    <string name="setting_portal_password">포털 로그인 비밀번호 변경</string>
    <string name="push_alarm">알림 설정</string>
    <string name="setting_app_push">앱 푸쉬 알림</string>
    <string name="setting_email_push">이메일 알림</string>
    <string name="drop_user">회원 탈퇴</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cancel">취소</string>
    <string name="취소">취소</string>
    <string name="실행">실행</string>
    <string name="execute">실행</string>
    <string name="toolbar_text">공단기 자리 예약 시스템</string>
    <string name="cur_user_val">현재 유저 정보</string>
    <string name="user_id">아이디</string>
    <string name="user_email">이메일</string>
    <string name="user_seat_val">예약 정보</string>
    <string name="no_argument">정보 없음</string>
    <string name="cur_seat_text">예약 희망 좌석 정보</string>
    <string name="change_able">수정 가능</string>
    <string name="change_seat_val">좌석정보 수정</string>
    <string name="change_xy">좌석정보\n수정</string>
    <string name="refresh_button">새로고침</string>
    <string name="check_seat_val">수정할 좌석 정보를 확인해 주세요</string>
    <string name="init_xy">좌석정보\n초기화</string>
    <string name="work_switch">자동예약\n작동중</string>
    <string name="reload_seats">좌석 정보 재로딩</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_notification_channel_id" />
    <string name="hint_id">ID 입력</string>
    <string name="hint_password">Password 입력</string>
    <string name="hint_name">성명을 입력</string>
    <string name="hint_mobileNO">휴대폰번호를 입력</string>
    <string name="hint_email">이메일을 입력</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="login_main_text">공단기 자리예약\n로그인</string>
    <string name="logo">logo</string>
    <string name="apply_main_text">공단기 자리예약\n회원가입</string>
    <string name="btn_cancel">취소</string>
    <string name="selector_text">로그인 방식을 선택해주세요.</string>
    <string name="hint_sub_id">포털 ID 입력</string>
    <string name="hint_sub_password">포털 Password 입력</string>
    <string name="user_register">등록</string>
    <string name="main_seat_info">희망 좌석</string>
    <string name="main_booked_title">예약 좌석 정보</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="reply_title">Default reply action</string>
</resources>