<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="email"
            app:title="@string/setting_email"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/setting_password"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/portal_login">
        <ListPreference
            app:entries="@array/login_entries"
            app:entryValues="@array/login_values"
            app:key="login_option"
            app:title="@string/setting_login_option"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="portal_id"
            app:title="@string/setting_portal_id"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="portal_password"
            app:title="@string/setting_portal_password" />

        <Preference
            app:key="check_portal_login"
            app:title="포털 로그인 정보 확인(email로 발송)" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/push_alarm">
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="app_push_alarm"
            app:title="@string/setting_app_push" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="email_push_alarm"
            app:title="@string/setting_email_push" />
    </PreferenceCategory>

    <PreferenceCategory app:title="기타">
        <EditTextPreference
            app:defaultValue="uhyeon7399@daum.net"
            app:enableCopying="true"
            app:persistent="false"
            app:selectable="false"
            app:shouldDisableView="false"
            app:title="이메일 문의 하기"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="logout"
            app:title="로그아웃"></Preference>

        <EditTextPreference
            app:key="drop_user"
            app:title="@string/drop_user" />
    </PreferenceCategory>
</PreferenceScreen>