<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/gongseat_logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_main_text"
            android:fontFamily="@font/baemin_jua"
            android:lineSpacingExtra="10dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/et_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:fontFamily="@font/baemin_jua"
            android:hint="@string/hint_id"
            android:inputType="text"
            android:text=""
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="#757575"
            android:autofillHints="sgfg" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@color/input_register_bg"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text=""
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_square_light_blue"
            android:text="@string/btn_login"
            android:textSize="18sp"
            android:fontFamily="@font/baemin_jua"
            android:textColor="@color/black"
            android:letterSpacing="0.4"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_square_light_blue"
            android:text="@string/btn_register"
            android:textSize="18sp"
            android:fontFamily="@font/baemin_jua"
            android:textColor="@color/black"
            android:letterSpacing="0.4"/>

    </LinearLayout>

</LinearLayout>